Fixed scrollbar

--- a/css/math.css
+++ b/css/math.css
@@ -35,7 +35,7 @@
   line-height: 150%;
   padding: 0px 20px;
   padding-bottom: 40px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 /* ---------------------------------------------------------------- */
